--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,9 @@ jobs:
         env:
           GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       # Check formatting
       - name: KTFmt Check
         run: |
