Improve JaCoCo report generation and CI test script
Updates the CI workflow to use 'connectedDebugAndroidTest' instead of 'connectedCheck'. Refactors the jacocoTestReport Gradle task to use 'dependsOn', improves file tree handling for class and execution data, and adds a completion message for report generation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,7 @@ jobs:
           force-avd-creation: true
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -skin 1080x2400
           disable-animations: true
-          script: ./gradlew connectedCheck --parallel --build-cache
+          script: ./gradlew connectedDebugAndroidTest --parallel --build-cache
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
