--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,25 +17,7 @@ robolectric = "4.11.1"
 sonar = "4.4.1.3373"
 firebaseAuthKtx = "22.0.0"
 googleid = "1.1.1"
-
-json = "20240303"
-# Testing Unit
-mockitoCore = "5.13.0"
-mockitoKotlin = "5.4.0"
-mockk = "1.13.7"
-
-# Testing UI
-
-kaspressoAllureSupport = "1.4.3"
-kaspressoComposeSupport = "1.5.5"
-mockkAgent = "1.13.7"
-mockkAndroid = "1.13.7"
-navigationCompose = "2.7.7"
-
-mockitoAndroid = "5.13.0"
-kotlinx-coroutines-test = "1.7.3"
-
-
+mockito = "5.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -63,17 +45,7 @@ kaspresso-compose = { group = "com.kaspersky.android-components", name = "kaspre
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
-
-# Testing Unit
-mockito-android = { module = "org.mockito:mockito-android", version.ref = "mockitoAndroid" }
-mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin" , version.ref="mockitoKotlin"}
-mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
-mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkAgent" }
-mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
-json = { module = "org.json:json", version.ref = "json" }
-
-
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
