--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Run each instrumentation test (androidTest) in its own clean process
+# This improves isolation between tests and prevents shared state issues,
+# especially important for Jetpack Compose UI tests.
+android.useAndroidTestOrchestrator=true
