--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,25 @@
-sonar.projectKey=your_sonarcloud_project_key
-sonar.organization=your_org
+# ==== Basic Sonar Configuration ====
+sonar.projectKey=SwentSeekr_seekr
+sonar.organization=swentsonar
 sonar.host.url=https://sonarcloud.io
 
-# Java/Kotlin sources
+# ==== Source Code ====
 sonar.sources=app/src/main/java
+sonar.language=kotlin
+sonar.sourceEncoding=UTF-8
 
-# Unit test reports
+# ==== Unit Test Reports ====
+# Use correct case: testDebugUnitTest (capital U)
 sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
 
-# Android Lint
+# ==== Lint Report ====
 sonar.androidLint.reportPaths=app/build/reports/lint-results-debug.xml
 
-# Jacoco code coverage
+# ==== Code Coverage ====
 sonar.coverage.jacoco.xmlReportPaths=app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
 
-# Exclude generated files (optional)
-sonar.exclusions=**/R.class,**/R$*.class,**/BuildConfig.*,**/Manifest*.*,**/*Test*.*
+# ==== Exclusions ====
+# Don’t exclude your test code entirely — it prevents test coverage display
+# Instead, exclude only generated / Android framework files
+sonar.exclusions=**/R.class,**/R$*.class,**/BuildConfig.*,**/Manifest*.*
+
