feat: Display hunt route on map
Implemented the following features:
- Fetched and displayed the walking route for a selected hunt using the Google Directions API.
- Added a polyline to the map to visualize the complete route, including start, end, and intermediate waypoints.
- Updated the Maps API key.
- Added the `INTERNET` permission to `AndroidManifest.xml` to allow network requests for fetching the route.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.swentseekr.seekr"
     >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
