--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   static-checks:
-    name: Static checks (format & lint)
+    name: Static checks (format, lint, unit tests)
     runs-on: ubuntu-latest
 
     steps:
@@ -40,18 +40,22 @@ jobs:
         env:
           GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
 
-      # Check formatting
+      # Formatting
       - name: KTFmt Check
         run: ./gradlew ktfmtCheck --parallel --build-cache
 
-      # Android Lint (no emulator needed)
+      # Lint (no emulator)
       - name: Lint
         run: ./gradlew lint --parallel --build-cache
 
+      # Unit tests & other verification (no emulator)
+      - name: Run unit tests (check)
+        run: ./gradlew check --parallel --build-cache
+
   tests-and-coverage:
-    name: Unit & instrumentation tests + coverage + Sonar
+    name: Instrumentation tests + coverage + Sonar
     runs-on: ubuntu-latest
-    # no "needs" here -> runs in parallel with static-checks, but both must pass
+    # Runs in parallel with static-checks (no "needs" unless you want ordering)
 
     steps:
       - name: Checkout
@@ -60,7 +64,7 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      # Enable KVM so the emulator runs faster
+      # Enable KVM so the Android emulator runs faster
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -109,10 +113,6 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      # Run unit tests & other checks (no emulator)
-      - name: Run unit tests (check)
-        run: ./gradlew check --parallel --build-cache
-
       # Start Firebase emulators for instrumentation tests
       - name: Start Firebase emulators
         run: |
@@ -124,7 +124,7 @@ jobs:
             echo "Firebase emulators not configured, skipping emulator startup..."
           fi
 
-      - name: Run instrumentation tests + Coverage + Sonar
+      - name: Run instrumentation tests + unit tests + Coverage + Sonar
         timeout-minutes: 25
         uses: reactivecircus/android-emulator-runner@v2
         env:
@@ -135,8 +135,7 @@ jobs:
           target: google_apis
           arch: x86_64
           avd-name: github
-          force-avd-creation: false           # reuse cached AVD if present
+          force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -skin 1080x2400
           disable-animations: true
-          # Unit tests already ran in the previous step, so we don't rerun testDebugUnitTest here
-          script: ./gradlew connectedDebugAndroidTest jacocoTestReport sonar --parallel --build-cache
+          script: ./gradlew connectedDebugAndroidTest testDebugUnitTest jacocoTestReport sonar --parallel --build-cache
