--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,18 +44,17 @@ jobs:
       - name: KTFmt Check
         run: ./gradlew ktfmtCheck --parallel --build-cache
 
-      # Lint (no emulator)
+      # Lint
       - name: Lint
         run: ./gradlew lint --parallel --build-cache
 
-      # Unit tests & other verification (no emulator)
+      # Unit tests
       - name: Run unit tests (check)
         run: ./gradlew check --parallel --build-cache
 
   tests-and-coverage:
     name: Instrumentation tests + coverage + Sonar
     runs-on: ubuntu-latest
-    # Runs in parallel with static-checks (no "needs" unless you want ordering)
 
     steps:
       - name: Checkout
@@ -64,7 +63,7 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      # Enable KVM so the Android emulator runs faster
+      # Enable KVM
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -113,7 +112,7 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      # Start Firebase emulators for instrumentation tests
+      # Start Firebase
       - name: Start Firebase emulators
         run: |
           if [ -e "firebase.json" ] && jq -e '.emulators' firebase.json >/dev/null; then
@@ -124,6 +123,7 @@ jobs:
             echo "Firebase emulators not configured, skipping emulator startup..."
           fi
 
+      # Run instrumentation tests + unit tests + Coverage + Sonar
       - name: Run instrumentation tests + unit tests + Coverage + Sonar
         timeout-minutes: 25
         uses: reactivecircus/android-emulator-runner@v2
