--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 jobs:
   static-checks:
     name: Static checks (format, lint, unit tests)
@@ -191,3 +191,11 @@ jobs:
         with:
           name: app-release-signed
           path: app/build/outputs/apk/release/app-release.apk
+
+      - name: Upload Proguard mapping
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: mapping-release
+          path: app/build/outputs/mapping/release/mapping.txt
+          if-no-files-found: error
