Pin Firebase CLI version in CI workflow
Updates the CI workflow to install a specific version (12.9.0) of firebase-tools instead of the latest. This ensures consistent behavior and avoids issues from breaking changes in newer versions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
           GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
 
       - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+        run: npm install -g firebase-tools@12.9.0
 
       # Start Firebase
       - name: Start Firebase emulators
