--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
           GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
 
       - name: Install Firebase CLI
-        run: npm install -g firebase-tools@12.9.0
+        run: npm install -g firebase-tools
 
       # Use JDK 21 specifically for firebase-tools / emulators
       - name: Setup JDK 21 (Firebase emulators)
