--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,15 @@
     "test": "jest --runInBand"
   },
   "engines": {
-    "node": "24"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.1.1"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "^3.4.1"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^3.0.0",
